--- a/web3ladies_t-matic/playscreen.html
+++ b/web3ladies_t-matic/playscreen.html
@@ -103,7 +103,7 @@
             <li class="num-input"></li>
             <li class="num-input"></li>
         </ul>
-    <div class="game-info">
+        <div class="game-info">
     <p>Select six (6) digits and continue</p>
     <div class="info-btn">
         <button class="i-btn clear">Clear</button>
@@ -218,7 +218,8 @@
             <option>2 draw</option>
         </select>
         <br>
-       <a href="./reward.html" target="_parent"><button class="confirm-draw">Confirm Transaction</button></a>
+       <!-- <a href="./reward.html" target="_parent"><button class="confirm-draw">Confirm Transaction</button></a> -->
+       <a  target="_parent"><button class="confirm-draw" onclick="participate()">Confirm Transaction</button></a> 
        </div> 
     </section>
     <!-- Barakat -->
