result page metask not connecting fixed

--- a/web3ladies_t-matic/result.html
+++ b/web3ladies_t-matic/result.html
@@ -129,19 +129,31 @@
             </div>
         </div>
         <div class="copyright">
-            <span>Copyright © T-Matic Team</span>
+            <span>Copyright © T-Mesult</li>
+                <li>About</li>
+                <li>How to play</li>
+            </ul>atic Team</span>
             <ul class="footer-nav">
                 <li>Home</li>
                 <li>Lotteries</li>
-                <li>Result</li>
-                <li>About</li>
-                <li>How to play</li>
-            </ul>
+                <li>R
         </div>
     </footer>
-    <script src="./javascript/blockchain.js"></script>
-    <!--custom script  -->
-    <script src="./javascript/script.js"></script>
+     <!-- NFT Lotto contract functions -->
+     <script
+     src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+     type="application/javascript">
+   </script>
+     <script type="text/javascript" src="../web3ladies_t-matic/javascript/blockchain.js"></script>
+     <!-- <script src="./lotto_NFT.js"></script> -->
+ 
+     <!-- Swipper -->
+     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+     <!--custom script  -->
     <script src="./javascript/result.js"></script>
+    <script src="../web3ladies_t-matic/javascript/result.js"></script>
+
+     <!-- <script src="web3ladies_t-matic/javascript/claim-reward.js"></script> -->
+    <!--custom script  -->
 </body>
 </html>
