--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- blockchain wallet signin -->
     <!-- <script type="module" src="https://cdn.ethers.io/lib/ethers-5.2.esm.min.js"></script> -->
 
-    
+     <!-- font family -->
+     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,1,300&display=swap" rel="stylesheet">
     <!-- fontawesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
