--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div>
                         <p class="angry-joe">Angry  Joe #990</p>
                     </div>  
-                    <div style="display: flex;">
+                    <div  class="swiper-container-div">
                         <div style="padding: 10px;" class="tickets">
                             <p>Tickets</p>
                             <p>200</p>
@@ -229,16 +229,16 @@
         <div class="lucky-number-div">
             <div>
                 <p class="lucky-tag">Today's lucky numbers</p>
-                    <button class="lucky-btn">Learn more</button>
+                <a href="" class="view-result">View Result</a>
             </div>
             <div>
-                <ul style="display:flex;">
-                    <li class="number">43</li>
-                    <li class="number">4</li>
-                    <li class="number">1</li>
-                    <li class="number">7</li>
-                    <li class="number">38</li>
-                    <li class="number">9</li>
+                <ul class="input-box">
+                    <li class="numbers">43</li>
+                    <li class="numbers">4</li>
+                    <li class="numbers">1</li>
+                    <li class="numbers">7</li>
+                    <li class="numbers">38</li>
+                    <li class="numbers">9</li>
                 </ul>
             </div>
         </div>
