--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="lucky-number-div">
             <div>
                 <p class="lucky-tag">Today's lucky numbers</p>
-                <a href="" class="view-result">View Result</a>
+                <a href="./web3ladies_t-matic/result.html" class="view-result">View Result</a>
             </div>
             <div>
                 <ul class="input-box">
