--- a/web3ladies_t-matic/result.html
+++ b/web3ladies_t-matic/result.html
@@ -132,14 +132,14 @@
             </div>
         </div>
         <div class="copyright">
-            <span>Copyright © T-Mesult</li>
-                <li>About</li>
-                <li>How to play</li>
-            </ul>atic Team</span>
+            <span>Copyright © T-Matic Team</span>
             <ul class="footer-nav">
                 <li>Home</li>
                 <li>Lotteries</li>
-                <li>R
+                <li>Result</li>
+                <li>About</li>
+                <li>How to play</li>
+            </ul>
         </div>
     </footer>
      <!-- NFT Lotto contract functions -->
